--- a/.final_builds/jobs/metricscollector/index.yml
+++ b/.final_builds/jobs/metricscollector/index.yml
@@ -3,4 +3,8 @@ builds:
     version: 01b4063e26920df7819a7e5a8aab88cd3d1320f9
     blobstore_id: 4dba04d5-c3bf-4aee-7bee-72b13999e13e
     sha1: ff6d6b0058d3400fe66e7107a567b2bd8a8a1185
+  d553f6e1061fb45f6a6bdcc49811b0999db87dcd:
+    version: d553f6e1061fb45f6a6bdcc49811b0999db87dcd
+    blobstore_id: 017371e7-2108-4506-66fd-5485c633e689
+    sha1: 22b12b43a4e76232e3cf95105542107eec5c9305
 format-version: "2"
