--- a/.final_builds/jobs/operator/index.yml
+++ b/.final_builds/jobs/operator/index.yml
@@ -1,4 +1,8 @@
 builds:
+  9cdfb514e01fedc27709de9156c17e282e84e106:
+    version: 9cdfb514e01fedc27709de9156c17e282e84e106
+    blobstore_id: 2dcc97e8-bebe-4aaf-7618-81182764da11
+    sha1: a0fd386fc1e87ac869e4a00671481946b39a6ee4
   c0fc9f479b9074dcb451f097b4e296439b220a77:
     version: c0fc9f479b9074dcb451f097b4e296439b220a77
     blobstore_id: 22ddfd4b-2746-42ee-577f-013dc43da6aa
