--- a/.final_builds/packages/metricscollector/index.yml
+++ b/.final_builds/packages/metricscollector/index.yml
@@ -1,4 +1,8 @@
 builds:
+  b62e3fa12bba0c8e137c355719a4f8c4f0f3b6be:
+    version: b62e3fa12bba0c8e137c355719a4f8c4f0f3b6be
+    blobstore_id: 5a7e107a-78b3-407f-6ee5-aeff02fcba32
+    sha1: 015d1a6337898539af1698a3fe37e9783bcc8e0f
   be87ef3dc84b22bc455405d4e349d9b02c67d6bc:
     version: be87ef3dc84b22bc455405d4e349d9b02c67d6bc
     blobstore_id: 9147c3b4-984d-40ad-4807-8fc8448897b8
