--- a/.final_builds/packages/apiserver/index.yml
+++ b/.final_builds/packages/apiserver/index.yml
@@ -3,4 +3,8 @@ builds:
     version: 7bab841bb4fe4fd9df97f2ae9ad2fbd0645ec377
     blobstore_id: 8ca5472d-9d11-4825-4d41-f57e1f49edc5
     sha1: 7d479edfddbb81ddcfeedc9bfdc496b891657863
+  a67aa2e76f49a7bf9444bf8fee31bc1679099cdf:
+    version: a67aa2e76f49a7bf9444bf8fee31bc1679099cdf
+    blobstore_id: f48e1529-1551-4d50-59e6-f36291998feb
+    sha1: abe71588dd3e331d8bc043fa5f2297f354ed855c
 format-version: "2"
