--- a/releases/app-autoscaler/index.yml
+++ b/releases/app-autoscaler/index.yml
@@ -1,4 +1,6 @@
 builds:
+  159d14a3-fb34-49ac-40f0-5809c35c8433:
+    version: 1.1.0
   aa86c291-b452-4db1-4723-0db06f314ce1:
     version: 1.0.0
 format-version: "2"
