--- a/example/operation/bosh-dns.yml
+++ b/example/operation/bosh-dns.yml
@@ -23,7 +23,7 @@
       release: bosh-dns-aliases
       properties:
         aliases:
-        - domain: postgres.service.cf.internal
+        - domain: autoscalerpostgres.service.cf.internal
           targets:
           - query: '*'
             instance_group: postgres_autoscaler
